--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>Homework 1</title>
+		<title>Homework</title>
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 
