--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -8,7 +8,36 @@
 	</head>
 
 	<body>
-
+		<div class="task-one wrapper1"> <!--firs flexbox-->
+			<div class="item-1">1</div>
+			<div class="item-2">2</div>
+			<div class="item-3">3</div>
+			<div class="item-4">4</div>
+			<div class="item-5">5</div>
+		</div> 
+		<br>
+		<br>
+		<div class="task-two wrapper2"> <!--second flexbox-->
+			<div class="item2-1">1</div>
+			<div class="item2-2">2</div>
+			<div class="item2-3">3</div>
+			<div class="item2-4">4</div>
+			<div class="item2-5">5</div>
+			<div class="item2-6">6</div>
+			<div class="item2-7">7</div>
+			<div class="item2-8">8</div>
+			<div class="item2-9">9</div>
+		</div>
+		<br>
+		<br>
+		<div class="task-three wrapper3"> <!--third flexbox-->
+			<div class="item3-1">1</div>
+			<div class="item3-2">2</div>
+			<div class="item3-3">3</div>
+			<div class="item3-4">4</div>
+			<div class="item3-5">5</div>
+			<div class="item3-6">6</div>
+		</div>
 	</body>
 
 </html>
