--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -9,6 +9,10 @@
 <body>
   
 
- <script src="js/index.js"></script>
+ <script src="js/index_1.js" defer></script>
+ <script src="js/index_2.js" defer></script>
+ <script src="js/index_3.js" defer></script>
+ <script src="js/index_4.js" defer></script>
+ <script src="js/index_5.js" defer></script>
 </body>
 </html>
