lesson_2 ready home task

--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -9,6 +9,32 @@
 
 	<body>
 
+		<div class="smile">
+				<div class="top">
+					<div class="block-1">
+						<div class="box-1">
+							<div class="box-2">
+								<div class="box-3">									
+								</div>
+							</div>
+						</div>
+					</div>	
+					<div class="block-1">
+						<div class="box-1">
+							<div class="box-2">
+								<div class="box-3">									
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>
+				<div class="sml">
+				</div>
+			</div>
+			
+			
+		<div class="body-1"></div>
+
 	</body>
 
 </html>
