--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -9,31 +9,42 @@
 
 	<body>
 
-		<div class="smile">
-				<div class="top">
-					<div class="block-1">
-						<div class="box-1">
-							<div class="box-2">
-								<div class="box-3">									
-								</div>
-							</div>
-						</div>
-					</div>	
-					<div class="block-1">
-						<div class="box-1">
-							<div class="box-2">
-								<div class="box-3">									
-								</div>
-							</div>
-						</div>
-					</div>	
-				</div>
-				<div class="sml">
-				</div>
-			</div>
-			
-			
-		<div class="body-1"></div>
+		<h1>УРОК 2. FLEXBOX</h1>
+
+		<h2>ТАСКА 1</h2>
+
+		<div class="container-flex-1">
+			<div class="item-1" style="background: green;">1</div>
+			<div class="item-2" style="background: red;">2</div>
+			<div class="item-3" style="background: green;">3</div>
+			<div class="item-4" style="background: red;">4</div>
+			<div class="item-5" style="background: green;">5</div>
+		</div>
+
+		<h2>ТАСКА 2</h2>
+
+		<div class="container-flex-2">
+			<div class="item-1" style="background: green;">1</div>
+			<div class="item-2">2</div>
+			<div class="item-3">3</div>
+			<div class="item-4">4</div>
+			<div class="item-5">5</div>
+			<div class="item-6">6</div>
+			<div class="item-7">7</div>
+			<div class="item-8">8</div>
+			<div class="item-9" style="background: green;">9</div>
+		</div>
+
+		<h2>ТАСКА 3</h2>
+
+		<div class="container-flex-3">
+			<div class="item-1 item1">1</div>
+			<div class="item-2 item1">2</div>
+			<div class="item-3 item1">3</div>
+			<div class="item-4 item2">4</div>
+			<div class="item-5 item2">5</div>
+			<div class="item-6 item2">6</div>
+		</div>
 
 	</body>
 
