lesson_3 ready home task

--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -5,9 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Homework</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+    <h1>УРОК 4. Начало JavaScript</h1>
+
+    <button onclick="task1()">Задание 1</button>
+    <p>Даны две переменные - a и b. Например, они равны a=1; b=2. Необходимо поменять местами эти числа (то есть a=2, b=1). Но не используя третью переменную.</p>
   
+    <button onclick="task2()">Задание 2</button>
+    <p>Пользователь вводит два числа. Найти и вывести максимальное из двух чисел.  Учтите вариант равенства чисел.</p>
+  
+    <button onclick="task3()">Задание 3</button>
+    <p>В первом подъезде квартиры с 1 по 20. Во втором с 21 по 48. В третьем с 49 по 90. Пользователь вводит номер квартиры. Программа должна указать в каком подъезде находится данная квартира.</p>
+  
+    <button onclick="task4()">Задание 4</button>
+    <p>Пользователь вводит год рождения. Программа показывает количество лет и если лет больше или равно 16, то пишет – «добро пожаловать», если нет – «вход воспрещен».</p>
+    
+    <button onclick="task5()">Задание 5</button>
+    <p>Написать программу, которая вычисляет выражение:</p>
+    <img src="img/task5.png" alt="Картинка задания">  
 
  <script src="js/index.js"></script>
 </body>
