--- a/lesson_2/first.html
+++ b/lesson_2/first.html
@@ -3,15 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style type="text/css">
+	.taskOne {
+	display: flex;
+	background-color:red;
+	justify-content:center ;
+	height: 800px;
+	}
+	.wrapper div {
+	height: 200px;
+	width: 150px;
+	margin: 10px;
+	color :white;
+	background-color: blue;
+	}
+	.one,.five {
+	align-self: flex-end;
+	}
+	.two,.four {
+	align-self: center;
+	}
+	.three {
+	align-self: flex-start;
+}
+</style>	
 </head>
 <body>
-<script> 
-	var a=1,b=2;
-	a=a+b;
-	b=a-b;
-	a=a-b;
-	document.write(a);
-	document.write(b);
-</script>
+	<div class="taskOne wrapper">
+	<div class="one">1</div>
+	<div class="two">2</div>
+	<div class="three">3</div>
+	<div class="four">4</div>
+	<div class="five">5</div>
+	</div>
 </body>
 </html>
