home work_5 tasks - 1,2,3

--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Homework</title>
+  <title>Homework_5</title>
 </head>
 <body>
   
 
- <script src="js/index.js"></script>
+ <script src="js/index.js" defer></script>
+ <script src="js/index2.js" defer></script>
+ <script src="js/index3.js" defer></script>
 </body>
 </html>
