lesson_5 ready home task

--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -5,9 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Homework</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
+  <h1>УРОК 4-5</h1>
+
+    <div class="button-item">
+      <button onclick="task1m1()">Задание 1 <span>Метод 1</span></button>
+      <button onclick="task1m2()">Задание 1 <span>Метод 2</span></button>
+      <button onclick="task1m3()">Задание 1 <span>Метод 3</span></button>      
+    </div>
+
+    <div class="button-item">
+      <button onclick="task2()">Задание 2</button>
+      <button onclick="task3()">Задание 3</button>      
+      <button onclick="task4()">Задание 4 <span>(вывод в консоли)</span></button>
+    </div>
+
+    <div class="button-item">
+      <button onclick="task5()">Задание 5 <span>(вывод в консоли)</span></button>
+      <button onclick="task6()">Задание 6* <span>(вывод в консоли)</span></button>
+    </div>
+
+    
 
  <script src="js/index.js"></script>
 </body>
