--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Homework</title>
+  <title>ДЗ 6-7</title>
 </head>
 <body>
+  
   
 
  <script src="js/index.js"></script>
