--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -10,5 +10,8 @@
  <script src="js/index.js" defer></script>
  <script src="js/index2.js" defer></script>
  <script src="js/index3.js" defer></script>
+ <script src="js/index4.js" defer></script>
+ <script src="js/index5.js" defer></script>
+ <script src="js/index6.js" defer></script>
 </body>
 </html>
