--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -26,6 +26,7 @@
     <div class="button-item">
       <button onclick="task5()">Задание 5 <span>(вывод в консоли)</span></button>
       <button onclick="task6()">Задание 6* <span>(вывод в консоли)</span></button>
+      <button onclick="task7()">Задание 7* <span>(вывод в консоли)</span></button>
     </div>
 
     
