Revert "lesson_5 ready"
This reverts commit d31e7b06c99d2bd97bb695a9606dc3edd23765c2.

--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>Homework</title>
+		<title>Homework 1</title>
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 
