--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -1,14 +1,36 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-
-	<head>
-		<meta charset="UTF-8" />
-		<title>Homework</title>
-		<link rel="stylesheet" href="styles/styles.css">
-	</head>
-
-	<body>
-
-	</body>
-
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" href="styles/styles.css">
+	<title>Flexbox</title>
+</head>
+<body>
+<div class="content1">
+		<div class="box box1">1</div>
+		<div class="box box2">2</div>
+		<div class="box box3">3</div>
+		<div class="box box4">4</div>
+		<div class="box box5">5</div>
+	</div>
+	<div class="content2">
+		<div class="box box1">1</div>
+		<div class="box box2">2</div>
+		<div class="box box3">3</div>
+		<div class="box box4">4</div>
+		<div class="box box5">5</div>
+		<div class="box box6">6</div>
+		<div class="box box7">7</div>
+		<div class="box box8">8</div>
+		<div class="box box9">9</div>
+	</div>
+	<div class="content3">
+		<div class="box box1">1</div>
+		<div class="box box2">2</div>
+		<div class="box box3">3</div>
+		<div class="box box4">4</div>
+		<div class="box box5">5</div>
+		<div class="box box6">6</div>
+	</div>
+</body>
 </html>
