--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Homework</title>
+    <meta charset="UTF-8">
+    <script src="js/js.js"></script>
+    <title>Yuliia</title>
 </head>
 <body>
-  
-
- <script src="js/index.js"></script>
+    
 </body>
 </html>
