--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset="UTF-8" />
-		<title>Homework</title>
-		<link rel="stylesheet" href="styles/styles.css">
-	</head>
-
-	<body>
-
-	</body>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="styles/styles.css" rel="stylesheet">
+</head>
+<body>
+    <div class="flex-container flex-container-1">
+        <div class="flex-element-1">1</div>
+        <div class="flex-element-1">2</div>
+        <div class="flex-element-1">3</div>
+        <div class="flex-element-1">4</div>
+        <div class="flex-element-1">5</div>
+    </div>
+    <div class="flex-container flex-container-2">
+        <div class="flex-element-2">1</div>
+        <div class="flex-element-2">2</div>
+        <div class="flex-element-2">3</div>
+        <div class="flex-element-2">4</div>
+        <div class="flex-element-2">5</div>
+        <div class="flex-element-2">6</div>
+        <div class="flex-element-2">7</div>
+        <div class="flex-element-2">8</div>
+        <div class="flex-element-2">9</div>
+    </div>
+    <div class="flex-container flex-container-3">
+        <div class="flex-element-3">1</div>
+        <div class="flex-element-3">2</div>
+        <div class="flex-element-3">3</div>
+        <div class="flex-element-3">4</div>
+        <div class="flex-element-3">5</div>
+        <div class="flex-element-3">6</div>
+    </div>       
+</body>
 </html>
