lesson_2 ready home task

--- a/lesson_2/задание2/index.html
+++ b/lesson_2/задание2/index.html
@@ -12,10 +12,10 @@
 		FLEXBOX CSS
 	</h1>
 	<div class="block flex-container">
-		<div class="block__element flex-element">
+		<div class="block__element flex-element2">
 			<span>1</span>
 		</div>
-		<div class="block__element1 flex-element">
+		<div class="block__element flex-element">
 			<span>2</span>
 		</div>
 		<div class="block__element flex-element">
@@ -30,7 +30,15 @@
 		<div class="block__element flex-element">
 			<span>6</span>
 		</div>
-		
+		<div class="block__element flex-element">
+			<span>7</span>
+		</div>
+		<div class="block__element flex-element3">
+			<span>8</span>
+		</div>
+		<div class="block__element flex-element1">
+			<span>9</span>
+		</div>
 	</div>
 
 	</body>
